--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>Vite App</title>
   </head>
   <body>
     <div id="app">
+        <h1>jflsdjfdsjlfld</h1>
         <div class="modal">
             <div class="card">
                 <div class="card__preview">
                     <img src="src/img/01.jpg" alt="Cool T-shirt" width="330" height="330" />
                     <div class="card__images">
-                        <img src="src/img/03.jpg" alt="Cool T-shirt #1" width="50" height="50" />
-                        <img src="src/img/02.jpg" alt="Cool T-shirt #2" width="50" height="50" />
+                        <img src="src/img/02.jpg" alt="Cool T-shirt #1" width="50" height="50" />
+                        <img src="src/img/03.jpg" alt="Cool T-shirt #2" width="50" height="50" class="active" />
                         <img src="src/img/04.jpg" alt="Cool T-shirt #3" width="50" height="50" />
                     </div>
                 </div>
@@ -25,7 +27,7 @@
                     <div class="card__worth">
                         <div class="card__price">
                             <p class="card__price__text">100 баллов</p>
-                            <button class="button yellow-btn">
+                            <button class="button button-yellow">
                                 Попросить 50 баллов
                             </button>
                         </div>
@@ -49,18 +51,19 @@
                                 Цвета:
                             </p>
                             <div class="card__defination__colors">
-                                <input type="radio" name="colors" id="color-1" checked>
-                                <input type="radio" name="colors" id="color-2">
-                                <input type="radio" name="colors" id="color-3">
-                                <label for="color-1" class="option option-1">
+                                <input type="radio" name="select" id="color-1" checked>
+                                <input type="radio" name="select" id="color-2">
+                                <input type="radio" name="select" id="color-3">
+
+                                <label for="color-1" class="option color-1">
                                     <div class="square"></div>
                                     <span>Синий</span>
                                 </label>
-                                <label for="color-2" class="option option-2">
+                                <label for="color-2" class="option color-2">
                                     <div class="square"></div>
                                     <span>Бежевый</span>
                                 </label>
-                                <label for="color-3" class="option option-3">
+                                <label for="color-3" class="option color-3">
                                     <div class="square"></div>
                                     <span>Серый</span>
                                 </label>
@@ -70,17 +73,17 @@
                             <p class="card__defination__text">
                                 Размер:
                             </p>
-                            <div class="card__defination__colors">
+                            <div class="card__defination__sizes">
                                 <input type="radio" name="sizes" id="size-1" checked>
                                 <input type="radio" name="sizes" id="size-2">
                                 <input type="radio" name="sizes" id="size-3">
-                                <label for="size-1" class="option option-1">
+                                <label for="size-1" class="option size-1">
                                     <span>S</span>
                                 </label>
-                                <label for="size-2" class="option option-2">
+                                <label for="size-2" class="option size-2">
                                     <span>M</span>
                                 </label>
-                                <label for="size-3" class="option option-3">
+                                <label for="size-3" class="option size-3">
                                     <span>L</span>
                                 </label>
                             </div>
@@ -102,9 +105,10 @@
                             </p>
                         </div>
                     </div>
-
-
                 </div>
+
+                <button class="card__close__btn" type="button">&times;</button>
+
             </div>
         </div>
     </div>
