css doesn't done

--- a/index.html
+++ b/index.html
@@ -8,110 +8,205 @@
     <title>Vite App</title>
   </head>
   <body>
+
     <div id="app">
-        <h1>jflsdjfdsjlfld</h1>
-        <div class="modal">
-            <div class="card">
-                <div class="card__preview">
-                    <img src="src/img/01.jpg" alt="Cool T-shirt" width="330" height="330" />
-                    <div class="card__images">
-                        <img src="src/img/02.jpg" alt="Cool T-shirt #1" width="50" height="50" />
-                        <img src="src/img/03.jpg" alt="Cool T-shirt #2" width="50" height="50" class="active" />
-                        <img src="src/img/04.jpg" alt="Cool T-shirt #3" width="50" height="50" />
-                    </div>
+        <header>
+            <div class="container">
+                <div class="header__logo">
+                    <img src="src/img/main/logo.svg" width="215px" alt="Logo">
                 </div>
-                <div class="card__description">
-                    <div class="card__title">
-                        Футболка "Эволюционируй или сдохни"
-                    </div>
-                    <div class="card__worth">
-                        <div class="card__price">
-                            <p class="card__price__text">100 баллов</p>
-                            <button class="button button-yellow">
-                                Попросить 50 баллов
-                            </button>
+                <div class="content">
+                    <div class="header__inner">
+                        <div class="header__search">
+                            <input type="text" name="search" id="search" class="search" placeholder="Поиск">
                         </div>
-                        <div class="card__balance">
-                            <div class="card__balance__text">
-                                <p class="card__balance__hint">
-                                    Твой баланс:
-                                </p>
-                                <p class="card__balance__value">
-                                    50 баллов
-                                </p>
+                        <div class="profile">
+                            <div class="profile__photo">
+                                <img src="src/img/main/user.png" alt="Profile photo">
                             </div>
-                            <div class="card__balance__img">
-                                <img src="src/img/sale.jpg" alt="Sale Icon" width="50" height="50">
+                            <div class="profile__info">
+                                <div class="profile__name">
+                                    Мортиджан
+                                </div>
+                                <div class="profile__points">
+                                    300 баллов
+                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="card__defination">
-                        <div class="card__defination__color">
-                            <p class="card__defination__text">
-                                Цвета:
-                            </p>
-                            <div class="card__defination__colors">
-                                <input type="radio" name="select" id="color-1" checked>
-                                <input type="radio" name="select" id="color-2">
-                                <input type="radio" name="select" id="color-3">
-
-                                <label for="color-1" class="option color-1">
-                                    <div class="square"></div>
-                                    <span>Синий</span>
-                                </label>
-                                <label for="color-2" class="option color-2">
-                                    <div class="square"></div>
-                                    <span>Бежевый</span>
-                                </label>
-                                <label for="color-3" class="option color-3">
-                                    <div class="square"></div>
-                                    <span>Серый</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="card__defination__size">
-                            <p class="card__defination__text">
-                                Размер:
-                            </p>
-                            <div class="card__defination__sizes">
-                                <input type="radio" name="sizes" id="size-1" checked>
-                                <input type="radio" name="sizes" id="size-2">
-                                <input type="radio" name="sizes" id="size-3">
-                                <label for="size-1" class="option size-1">
-                                    <span>S</span>
-                                </label>
-                                <label for="size-2" class="option size-2">
-                                    <span>M</span>
-                                </label>
-                                <label for="size-3" class="option size-3">
-                                    <span>L</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="card__defination__detail">
-                            <p class="card__defination__title">
-                                Детали:
-                            </p>
-                            <p class="card__defination__text">
-                                Брендированная толстовка от Qazaq Republic. Материал: Хлопок 80%, Вискоза 20%
-                            </p>
-                        </div>
-                        <div class="card__defination__detail">
-                            <p class="card__defination__title">
-                                Как выбрать размер:
-                            </p>
-                            <p class="card__defination__text">
-                                Написать дяде Рику для уточнения.
-                            </p>
                         </div>
                     </div>
                 </div>
+            </div>
+        </header>
+        <div class="main">
+            <div class="container">
+                <div class="sidebar">
+                    <menu>
+                        <li class="menu__items"><a href="#">Оргсхема</a></li>
+                        <li class="menu__items"><a href="#">Kolesa Team</a></li>
+                        <li class="menu__items active"><a href="#">Kolesa Shop</a></li>
+                        <li class="menu__items"><a href="#">Картина компании</a></li>
+                        <li class="menu__items"><a href="#">Новости</a></li>
+                        <li class="menu__items"><a href="#">Education</a></li>
+                        <li class="menu__items"><a href="#">Guidelines</a></li>
+                        <li class="menu__items"><a href="#">Библиотека</a></li>
+                        <li class="menu__items"><a href="#">FAQ</a></li>
+                    </menu>
+                </div>
+                <div class="content">
+                    <div class="banner">
+                        <img src="src/img/main/banner.png" width="1038px"  alt="Banner">
+                    </div>
 
-                <button class="card__close__btn" type="button">&times;</button>
+                    <div class="hot-buttons">
+                        <button class="hot-button hot-button--payed-green">
+                            <img src="src/img/main/plus.png" alt="Plus">
+                            <span class="hot-button__text">Получить баллы</span>
+                        </button>
+                        <button class="hot-button hot-button--payed-yellow">
+                            <img src="src/img/main/question.png" alt="Plus">
+                            <span class="hot-button__text">Как получить баллы?</span>
+                        </button>
+                        <button class="hot-button hot-button--payed-blue">
+                            <img src="src/img/main/gift.png" alt="Plus">
+                            <span class="hot-button__text">Подарить баллы</span>
+                        </button>
+                    </div>
 
+                    <div class="categories">
+                        <input type="radio" name="category" class="categories__input" id="category1" checked>
+                        <label for="category1" class="categories__label">Все товары</label>
+                        <input type="radio" name="category" class="categories__input" id="category2">
+                        <label for="category2" class="categories__label">Одежда</label>
+                        <input type="radio" name="category" class="categories__input" id="category3">
+                        <label for="category3" class="categories__label">Аксессуары</label>
+                    </div>
+
+                    <div class="products">
+
+
+                        <div class="product">
+                            <div class="product__img">
+                                <img src="src/img/main/product-icon.png" alt="Product Icon">
+                                <span class="product__badge">
+                                    new
+                                </span>
+                            </div>
+                            <div class="product__desc">
+                                <div class="product__price">
+                                    220 баллов
+                                </div>
+                                <div class="product__name">
+                                    Футболка "Эволюционируй или умри"
+                                </div>
+                                <div class="product__size">
+                                    Размеры S/M/L
+                                </div>
+                                <button class="product__order-button">
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__img">
+                                <img src="src/img/main/product-icon.png" alt="Product Icon">
+                                <span class="product__badge">
+                                    new
+                                </span>
+                            </div>
+                            <div class="product__desc">
+                                <div class="product__price">
+                                    220 баллов
+                                </div>
+                                <div class="product__name">
+                                    Футболка "Эволюционируй или умри"
+                                </div>
+                                <div class="product__size">
+                                    Размеры S/M/L
+                                </div>
+                                <button class="product__order-button">
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__img">
+                                <img src="src/img/main/product-icon.png" alt="Product Icon">
+                                <span class="product__badge">
+                                    new
+                                </span>
+                            </div>
+                            <div class="product__desc">
+                                <div class="product__price">
+                                    220 баллов
+                                </div>
+                                <div class="product__name">
+                                    Футболка "Эволюционируй или умри"
+                                </div>
+                                <div class="product__size">
+                                    Размеры S/M/L
+                                </div>
+                                <button class="product__order-button">
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__img">
+                                <img src="src/img/main/product-icon.png" alt="Product Icon">
+                                <span class="product__badge">
+                                    new
+                                </span>
+                            </div>
+                            <div class="product__desc">
+                                <div class="product__price">
+                                    220 баллов
+                                </div>
+                                <div class="product__name">
+                                    Футболка "Эволюционируй или умри"
+                                </div>
+                                <div class="product__size">
+                                    Размеры S/M/L
+                                </div>
+                                <button class="product__order-button">
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="product__img">
+                                <img src="src/img/main/product-icon.png" alt="Product Icon">
+                                <span class="product__badge">
+                                    new
+                                </span>
+                            </div>
+                            <div class="product__desc">
+                                <div class="product__price">
+                                    220 баллов
+                                </div>
+                                <div class="product__name">
+                                    Футболка "Эволюционируй или умри"
+                                </div>
+                                <div class="product__size">
+                                    Размеры S/M/L
+                                </div>
+                                <button class="product__order-button">
+                                    Заказать
+                                </button>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                </div>
             </div>
         </div>
+
+        <footer>
+
+        </footer>
     </div>
-    <script type="module" src="/src/js/main.js"></script>
-  </body>
+
+    <script type="module" src="/src/js/script.js"></script>
+</body>
 </html>
